# todo

./: Cargo.toml  docker-compose.yaml  tailwind.config.cjs  tailwind.css
assets/: main.css  tailwind.css
src/: main.rs
src/components/: mod.rs  nav.rs  sidebar.rs  todo_edit.rs  todo_new.rs  todo_overview.rs  view.rs
src/server/: database.rs  dbpool.rs  mod.rs  todo.rs
src/server/api/: todo.rs
src/server/entitys/: todo.rs
src/shared/dto/: todo.rs
