[package]
name = "todo"
version = "0.1.0"
authors = ["Fabian Kaschner <kaschner.fab@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"], optional = true }
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "uuid",
], optional = true }
serde_json = "1"
once_cell = { version = "1", optional = true }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = [] # <----- remove the default web target
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
  "dioxus/server",
  "tokio",
  "sqlx",
  "once_cell",
] # <----- add this additional target
