[package]
name = "todo"
version = "0.1.0"
authors = ["Fabian Kaschner <kaschner.fab@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
reqwest = { version = "0.12.24", features = ["json"] }
sea-orm = { version = "1.1.19", optional = true, features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-time",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"], optional = true }


[features]
default = [] # <----- remove the default web target
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
  "dioxus/server",
  "dep:tokio",
  "dep:sea-orm",
] # <----- add this additional target
